# termspp

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  MODULE.bazel  README.md
.devcontainer/: Dockerfile  devcontainer.json
.scripts/: checksum.sh
resources/: BUILD  basic.RRF  basic.xml
src/: BUILD  defs.bzl  main.cpp
src/builder/: BUILD  document.cpp  document.hpp  policies.cpp  policies.hpp
src/common/: BUILD  arena.cpp  arena.hpp  result.hpp  scope.hpp  strings.hpp  utils.hpp
src/mapper/: BUILD  constants.hpp  defs.hpp  map.hpp  sct.hpp
src/mesh/: BUILD  constants.hpp  defs.hpp  fields.hpp  parser.cpp  parser.hpp  records.hpp
