module(name = 'termspp')

# Deps
## Tools
http_archive = use_repo_rule('@bazel_tools//tools/build_defs/repo:http.bzl', 'http_archive')
git_repository = use_repo_rule('@bazel_tools//tools/build_defs/repo:git.bzl', 'git_repository')
new_local_repository = use_repo_rule('@bazel_tools//tools/build_defs/repo:local.bzl', 'new_local_repository')

bazel_dep(name = 'platforms', version = '0.0.10')
bazel_dep(name = 'bazel_skylib', version = '1.7.1')
bazel_dep(name = 'rules_foreign_cc', version = '0.12.0')

## Toolchain
bazel_dep(name='rules_python', version='0.37.1')
python = use_extension('@rules_python//python/extensions:python.bzl', 'python')
python.toolchain(python_version = '3.10', is_default = True, ignore_root_user_error = True)

bazel_dep(name = 'toolchains_llvm', version = '1.2.0')

## Packages: Bazel registry
bazel_dep(name = 'pugixml', version = '1.14.bcr.1')
bazel_dep(name = 'mimalloc', version = '2.1.7-bcr.alpha.1')

## Packages: Git/Remote archive(s)
http_archive(
  name = 'com_github_martinmoene_expected',
  build_file = '//third_party:expected.BUILD',
  sha256 = '27649f30bd9d4fe7b193ab3eb6f78c64d0f585c24c085f340b4722b3d0b5e701',
  strip_prefix = 'expected-lite-0.8.0',
  urls = ['https://github.com/martinmoene/expected-lite/archive/refs/tags/v0.8.0.tar.gz'],
)

http_archive(
  name = 'com_github_ben-strasser_fast-cpp-csv-parser',
  build_file = '//third_party:csv.BUILD',
  sha256 = 'fba4f74f8bf6c403a1031e7025cc18be005f5d4624ba78541e409a86fd5af160',
  strip_prefix = 'fast-cpp-csv-parser-758f5665705a38da55322511d5b22fe2679918fe',
  url = 'https://github.com/ben-strasser/fast-cpp-csv-parser/archive/758f5665705a38da55322511d5b22fe2679918fe.tar.gz',
)

http_archive(
  name = 'com_github_jpbarrette_curlpp',
  build_file = 'third_party/curlpp.BUILD',
  sha256 = '97e3819bdcffc3e4047b6ac57ca14e04af85380bd93afe314bee9dd5c7f46a0a',
  strip_prefix = 'curlpp-0.8.1',
  url = 'https://github.com/jpbarrette/curlpp/archive/v0.8.1.tar.gz',
)

## IDE
bazel_dep(name = 'hedron_compile_commands', dev_dependency = True)

git_override(
  module_name = 'hedron_compile_commands',
  remote = 'https://github.com/hedronvision/bazel-compile-commands-extractor.git',
  commit = '4f28899228fb3ad0126897876f147ca15026151e',
)

# Toolchain config
llvm = use_extension('@toolchains_llvm//toolchain/extensions:llvm.bzl', 'llvm')
llvm.toolchain(
  llvm_version = '16.0.0',
)

use_repo(llvm, 'llvm_toolchain')
register_toolchains('@llvm_toolchain//:all')
